--- a/publications.htm
+++ b/publications.htm
@@ -156,92 +156,118 @@ Jan. 2018.</font></p>
 reported Helsinki Ti</font></span><font size="4" face="Times New Roman,serif">mes, 
 Dec., 2024.</font></p>
 <p style="margin-top:0.5cm; margin-bottom:0.5cm" class="MsoNormal">
-<span lang="en-us"><font size="5"><b>2025 </b></font></span></p>
+<span lang="en-us"><font size="5"><b>2026</b></font></span></p>
 <p style="margin-top:0.5cm; margin-bottom:0.5cm" class="MsoNormal">
-<font face="Times New Roman" size="4">&nbsp;36<span lang="fi">4</span>. Yang 
-Merik Liu, Adam Turnbull, Ehsan Adeli, <b>Guoying Zhao</b>, Kuan Hong Wang, F. 
+<font face="Times New Roman" size="4">&nbsp;3<span lang="fi">70</span>. Marko Savic, <b>Guoying Zhao</b>.
+Oulu Remote-photoplethysmography Presentation Attacks Database (OR-PAD). 
+International Journal of Computer Vision (IJCV), 2026.</font></p>
+<p style="margin-top:0.5cm; margin-bottom:0.5cm" class="MsoNormal">
+<span lang="fi"><font size="4">&nbsp;</font></span><font face="Times New Roman" size="4">36<span lang="fi">9</span>.<span lang="fi">
+</span>Mengting Wei, Xingxun Jiang, Haoyu Chen, Yante Li, <b>Guoying Zhao</b>. 
+LatentMag: Self-Supervised 3D Magnification for Micro Expressions via Latent 
+Extrapolation<span lang="fi">.</span> IEEE Transactions on Affective Computing<span lang="fi">. 
+2026.</span></font></p>
+<p style="margin-top:0.5cm; margin-bottom:0.5cm" class="MsoNormal">
+<span lang="fi"><font size="4">&nbsp;</font></span><font face="Times New Roman" size="4">36<span lang="fi">8</span>. Yang Merik Liu, Adam Turnbull, Ehsan Adeli, <b>Guoying Zhao</b>, Kuan Hong Wang, F. 
 Vankee Lin. <u>A Multi-Dimensional Transfer Learning Framework for Studying 
-Reward-Guided Behaviors Across Species</u>. Nature Mental Health. (in press)
+Reward-Guided Behaviors Across Species</u>. Nature Mental Health. 
+<span lang="fi">2026 </span>(in press)
 </font></p>
+<p style="margin-top: 0.5cm; margin-bottom: 0.5cm" class="MsoNormal">
+<font face="Times New Roman" size="4"><span lang="fi">&nbsp;</span>36<span lang="fi">7</span>. Xingyu Liu, Yan Jiang, Xu Cheng, Hao 
+Yu, Haoyu Chen, <b>Guoying Zhao</b>. CROMBO: Cross-Modality Bootstrapping for 
+Unified Sketch-Photo Representation Learning. ACM Transactions on Multimedia 
+Computing Communications and Applications. 2026.</font></p>
 <p style="margin-top:0.5cm; margin-bottom:0.5cm" class="MsoNormal">
-<font size="4">&nbsp;364. </font><font face="Times New Roman" size="4">Marko Savic, <b>Guoying Zhao</b>.
+<span lang="en-us"><font size="5"><b>2025</b></font></span></p>
+<p style="margin-top:0.5cm; margin-bottom:0.5cm" class="MsoNormal">
+<font size="4">&nbsp;36<span lang="fi">6</span>. </font><font face="Times New Roman" size="4">Marko Savic, <b>Guoying Zhao</b>.
 <u>RS+rPPG: Robust Strongly Self-Supervised Learning for rPPG</u>. TCSVT, 2025.
 </font></p>
 <p style="margin-top:0.5cm; margin-bottom:0.5cm" class="MsoNormal">
-<font size="4">&nbsp;36<span lang="fi">3</span>. Qianru Xu, Feng Vankee Lina, Yang Liu, <b>Guoying Zhao</b>. 
+<font size="4">&nbsp;36<span lang="fi">5</span>. Sanna J&auml;rvel&auml;, <b>Guoying Zhao</b>, Andy Nguyen &amp; 
+Haoyu Chen. Hybrid intelligence: Human¨CAI co evolution and learning.&nbsp;British 
+Journal of Educational Technology, 56, 455-468, 2025.</font></p>
+<p style="margin-top:0.5cm; margin-bottom:0.5cm" class="MsoNormal">
+<font size="4">&nbsp;36<span lang="fi">4</span>. Qianru Xu, Feng Vankee Lina, Yang Liu, <b>Guoying Zhao</b>. 
 Bridging gaps in sundown syndrome research: a systematic review and roadmap for 
 future multimodal approaches. Archives of Clinical Neuropsychology, 2025.</font></p>
 <p style="margin-top:0.5cm; margin-bottom:0.5cm" class="MsoNormal">
-<font size="4"><span lang="fi">&nbsp;362. </span>Zhaoqiang Xia, Hexiang Huang, 
+<font size="4"><span lang="fi">&nbsp;363. </span>Zhaoqiang Xia, Hexiang Huang, 
 Haoyu Chen, Xiaoyi Feng, <b>Guoying Zhao</b>. Hybrid-supervised Hypergraph-enhanced 
 Transformer for Micro-gesture Based Emotion Recognition. IEEE Transactions on 
 Affective Computing. 2025.</font></p>
 <p style="margin-top:0.5cm; margin-bottom:0.5cm" class="MsoNormal">
-<font size="4">&nbsp;361. Xu Cheng, Shuya Deng, Hao Yu, <b>Guoying Zhao</b>. 
+<font size="4">&nbsp;36<span lang="fi">2</span>. Xu Cheng, Shuya Deng, Hao Yu, <b>Guoying Zhao</b>. 
 DMANet: Dual-modality alignment network for visible-infrared person 
 re-identification. Pattern Recognition, 157, 110859, 2025.</font></p>
 <p style="margin-top:0.5cm; margin-bottom:0.5cm" class="MsoNormal">
-&nbsp;<font face="Times New Roman" size="4">360. Wenhui Ji, Xu Cheng, Yan Jiang, 
+&nbsp;<font face="Times New Roman" size="4">36<span lang="fi">1</span>. Wenhui Ji, Xu Cheng, Yan Jiang, 
 Zhaodong Sun, <b>Guoying Zhao</b>. Learning from Yourself to Others for 
 Unsupervised Visible-Infrared Re-Identification. TCSVT, 2025.</font></p>
 <p style="margin-top:0.5cm; margin-bottom:0.5cm" class="MsoNormal">
-<font face="Times New Roman" size="4">&nbsp;359. Yang Liu, Kevin H. M. Cheng, 
+<font face="Times New Roman" size="4">&nbsp;3<span lang="fi">60</span>. Yang Liu, Kevin H. M. Cheng, 
 Marko Savic, Haoyu Chen, Zitong Yu, <b>Guoying Zhao</b>. 3D Face 
 De-identification with Preserving Multi-Facial Attributes: A Benchmark. IEEE 
 Transactions on Biometrics, Behavior, and Identity Science. 2025.</font></p>
 <p style="margin-top:0.5cm; margin-bottom:0.5cm" class="MsoNormal">
-<font face="Times New Roman" size="4">&nbsp;358. </font>
+<font face="Times New Roman" size="4">&nbsp;35<span lang="fi">9</span>. </font>
 <font face="Times New Roman" size="4">Yan Jiang, Xu Cheng, Hao Yu, Xingyu Liu, 
 Haoyu Chen, <b>Guoying Zhao</b>. <u>DSAF: Dual Space Alignment Framework for 
 Visible-Infrared Person Re-Identification</u>. IEEE Transactions on Multimedia, 
 2025.</font></p>
 <p _ngcontent-ng-c4097151159 class="MsoNormal" style="margin-top: 0.5cm; margin-bottom: 0.5cm">
-<font face="Times New Roman" size="4">&nbsp;357. Weisong Zhao, Xiangyu Zhu, 
+<font face="Times New Roman" size="4">&nbsp;35<span lang="fi">8</span>. Weisong Zhao, Xiangyu Zhu, 
 Haichao Shi, Xiao-Yu Zhang, <b>Guoying Zhao</b>, Zhen Lei. Global Cross-Entropy 
 Loss for Deep Face Recognition. IEEE Trans. on Image Processing. 2025.</font></p>
 <p _ngcontent-ng-c4097151159 class="MsoNormal" style="margin-top: 0.5cm; margin-bottom: 0.5cm">
-<font face="Times New Roman" size="4"><span lang="fi">&nbsp;35</span>6<span lang="fi">.
+<font face="Times New Roman" size="4"><span lang="fi">&nbsp;357.
 </span>Ling Zhou, Mingpei Wang, Xiaohua Huang, Wenming Zheng, Qirong Mao, <b>
 Guoying Zhao</b>. An empirical study of super-resolution on low-resolution 
 micro-expression recognition. IEEE Transactions on Affective Computing, 2025.</font></p>
 <p _ngcontent-ng-c4097151159 class="MsoNormal" style="margin-top: 0.5cm; margin-bottom: 0.5cm">
-<font face="Times New Roman" size="4">&nbsp;355. </font>
+<font face="Times New Roman" size="4">&nbsp;35<span lang="fi">6</span>. </font>
 <font face="Times New Roman" size="4">Yushun Xiao, Wenming Zheng, <b>Guoying 
 Zhao</b>. Dynamical Causal Graph Neural Network for EEG Emotion Recognition. 
 IEEE Transactions on Affective Computing, 2025.</font></p>
 <p _ngcontent-ng-c4097151159 class="MsoNormal" style="margin-top: 0.5cm; margin-bottom: 0.5cm">
-<font face="Times New Roman" size="4">&nbsp;354. Shuyang Chu, Menghan Xia, 
+<font face="Times New Roman" size="4">&nbsp;35<span lang="fi">5</span>. Shuyang Chu, Menghan Xia, 
 Mengyao Yuan, Xin Liu, Tapio Sepp&auml;nen, <b>Guoying Zhao</b>, Jingang Shi. Robust 
 Video-based Remote Physiological Measurement through Latent Codebook Querying. 
 IEEE Journal of Biomedical and Health Informatics. 2025.</font></p>
 <p style="margin-top:0.5cm; margin-bottom:0.5cm" class="MsoNormal">
-<font face="Times New Roman" size="4">&nbsp;353. Hao Yu, Haoyu Chen, Wei Peng, 
+<font face="Times New Roman" size="4">&nbsp;35<span lang="fi">4</span>. Hao Yu, Haoyu Chen, Wei Peng, 
 Xu Cheng, <b>Guoying Zhao</b>.
 <a target="_blank" href="https://openreview.net/forum?id=orSt7BTll2&referrer=%5BAuthor%20Console%5D(%2Fgroup%3Fid%3DAAAI.org%2F2025%2FConference%2FAuthors%23your-submissions)">
 FreeNet: Liberating Depth-wise Separable Operations for Building Faster Mobile 
 Vision Architectures</a>. AAAI Conference on Artificial Intelligence (AAAI 
 2025). (Acceptance rate: 23.4%) </font></p>
 <p style="margin-top:0.5cm; margin-bottom:0.5cm" class="MsoNormal">
-<font size="4">&nbsp;352. </font><font face="Times New Roman" size="4">Ali Salar, 
+<font size="4">&nbsp;35<span lang="fi">3</span>. </font><font face="Times New Roman" size="4">Ali Salar, 
 Qing Liu, Yingli Tian, <b>Guoying Zhao</b>. Enhancing Facial Privacy Protection 
 via Weakening Diffusion Purification. CVPR 2025. </font><font size="4">
 (Acceptance rate: 22.1%)</font></p>
 <p style="margin-top:0.5cm; margin-bottom:0.5cm" class="MsoNormal">
-<font size="4">&nbsp;351. Yante Li, Hanwen Qi, Haoyu Chen, Xinlian Liang, <b>
+<font size="4">&nbsp;35<span lang="fi">2</span>. Yante Li, Hanwen Qi, Haoyu Chen, Xinlian Liang, <b>
 Guoying Zhao</b>. Deep Change Monitoring: A Hyperbolic Representative Learning 
 Framework and A Dataset for Long-term Fine-grained Tree Change Detection. CVPR 
 2025. (Acceptance rate: 22.1%)</font></p>
 <div class="note-authors">
 	<p style="margin-top: 0.5cm; margin-bottom: 0.5cm" class="MsoNormal">
-	<font size="4" face="Times New Roman">&nbsp;350. Yan Jiang, Hao Yu, Xu 
+	<font size="4" face="Times New Roman">&nbsp;35<span lang="fi">1</span>. Yan Jiang, Hao Yu, Xu 
 	Cheng, Haoyu Chen, Zhaodong Sun, <b>Guoying Zhao</b>. From Laboratory to 
 	Real World: A New Benchmark Towards Privacy-Preserved Visible-Infrared 
 	Person Re-Identification. CVPR 2025. (Acceptance rate: 22.1%)</font><div class="note-authors">
-		<font size="4" face="Times New Roman">&nbsp;349. Shuyang Chu, Jingang 
+		<font size="4" face="Times New Roman">&nbsp;3<span lang="fi">50</span>. Shuyang Chu, Jingang 
 		Shi, Xu Cheng, Haoyu Chen, Xin Liu, Xu Jian, <b>Guoying Zhao</b>. To 
 		Remember, To Adapt, To Preempt: A Stable Continual Test-Time Adaptation 
 		Framework for Remote Physiological Measurement in Dynamic Domain Shifts. 
-		ACM Multimedia 2025.</font></div>
+		ACM Multimedia 2025.</font><p><font size="4" face="Times New Roman">
+		<span lang="fi">&nbsp;</span>3<span lang="fi">49. </span>Yifan Wang, Jie 
+		Gui, Baosheng Yu, Qi Li, Zhenan Sun, Juho Kannala, <b>Guoying Zhao</b>. 
+		FingerVeinSyn-5M: A Million-Scale Dataset and Benchmark for Finger Vein 
+		Recognition. Proceedings of the 33rd ACM International Conference on 
+		Multimedia (ACM MM), 2025<span lang="fi">.</span></font></div>
 </div>
 <p style="margin-top:0.5cm; margin-bottom:0.5cm" class="MsoNormal">
 <font size="4">&nbsp;348. Hao Yu, Haoyu Chen, <b>Guoying Zhao</b>. <u>Learning 
