--- a/teammembers.htm
+++ b/teammembers.htm
@@ -95,12 +95,12 @@ span.contentpasted0
 		<img border="0" src="Atif.jpg"></td>
 		<td height="0" align="center" valign="top" width="224">
 		<img border="0" src="Hui.jpg"></td>
-		<td width="232" height="0" align="center" valign="top">
-		<img border="0" src="Marko.jpg"></td>
 		<td height="0" align="center" valign="top" width="188">
 		<img border="0" src="Mengting.jpg"></td>
 		<td height="0" align="center" valign="top" width="225">
 		　<img border="0" src="Haotian.jpg"></td>
+		<td height="0" align="center" valign="top" width="225">
+		<img alt="Huai-Qian Khor" sizes="print 80px,128px" src="https://scholar.googleusercontent.com/citations?view_op=view_photo&user=bjnCB84AAAAJ&citpid=1" id="gsc_prf_pup-img4" srcset="https://scholar.googleusercontent.com/citations?view_op=view_photo&amp;user=bjnCB84AAAAJ&amp;citpid=1 128w,https://scholar.googleusercontent.com/citations?view_op=medium_photo&amp;user=bjnCB84AAAAJ&amp;citpid=1 256w" width="137" height="142"></td>
 	</tr>
 	<tr>
 		<td width="222" height="0" align="center" valign="top">
@@ -109,9 +109,6 @@ span.contentpasted0
 		<td height="0" align="center" valign="top" width="224">
 		<p style="text-align: center; margin-top: 0.2cm; margin-bottom: 0.5cm"><font face="Times New Roman"><b>Ms. 
 		H</b></font><b><font face="Times New Roman">ui&nbsp; KUURILA-ZHANG</font></b></td>
-		<td width="232" height="0" align="center" valign="top">
-		<p style="text-align: center; margin-top: 0.2cm; margin-bottom: 0.5cm"><b>
-		<font face="Times New Roman">Mr. Marko SAVIC</font></b></td>
 		<td height="0" align="center" valign="top" width="188">
 		<p style="text-align: center; ">
 		<b>
@@ -120,10 +117,11 @@ span.contentpasted0
 		<td height="0" align="center" valign="top" width="225">
 		<p style="text-align: center; margin-top: 0.2cm; margin-bottom: 0.5cm">
 		<font face="Times New Roman"><b>Mr. Haotian LIU</b></font></td>
+		<td width="222" height="0" align="center" valign="top">
+		<p style="text-align: center; margin-top: 0.2cm; margin-bottom: 0.5cm">
+		<font face="Times New Roman"><b><span lang="zh-cn">Mr. </span>Huai-Qian K</b></font><span lang="en-us"><b>HOR</b></span></td>
 	</tr>
 	<tr>
-		<td height="0" align="center" valign="top" width="225">
-		<img alt="Huai-Qian Khor" sizes="print 80px,128px" src="https://scholar.googleusercontent.com/citations?view_op=view_photo&user=bjnCB84AAAAJ&citpid=1" id="gsc_prf_pup-img4" srcset="https://scholar.googleusercontent.com/citations?view_op=view_photo&amp;user=bjnCB84AAAAJ&amp;citpid=1 128w,https://scholar.googleusercontent.com/citations?view_op=medium_photo&amp;user=bjnCB84AAAAJ&amp;citpid=1 256w" width="137" height="142"></td>
 		<td height="0" align="center" valign="top" width="225">
 		<img border="0" src="Ali.jpg" width="132" height="150"></td>
 		<td height="0" align="center" valign="top" width="232">
@@ -132,11 +130,10 @@ span.contentpasted0
 		<img src="https://media.licdn.com/dms/image/v2/D4E03AQG4_shUiphxtA/profile-displayphoto-shrink_200_200/profile-displayphoto-shrink_200_200/0/1692620457145?e=2147483647&v=beta&t=asArQ7bK-aAq8UKeePZNzrtG7J6rX2U20z5tVZIgSd4" jsaction class="sFlh5c FyHeAf iPVvYb" style="max-width: 200px; width: 145px; height: 149px; margin: 0px" alt="Samuel Boccara - Courbevoie, Île-de-France, France | Profil ..." jsname="kn3ccd" aria-hidden="false"></td>
 		<td height="0" align="center" valign="top" width="184">
 		　<img border="0" src="Arto.jpg" width="109" height="148"></td>
+		<td height="0" align="center" valign="top" width="225">
+		<img border="0" src="Yan.jpg" width="145" height="190"></td>
 	</tr>
 	<tr>
-		<td width="222" height="0" align="center" valign="top">
-		<p style="text-align: center; margin-top: 0.2cm; margin-bottom: 0.5cm">
-		<font face="Times New Roman"><b><span lang="zh-cn">Mr. </span>Huai-Qian K</b></font><span lang="en-us"><b>HOR</b></span></td>
 		<td width="226" height="0" align="center" valign="top">
 		<p style="text-align: center; margin-top: 0.2cm; margin-bottom: 0.5cm">
 		<font face="Times New Roman"><b><span lang="zh-cn">Mr. </span>Ali S</b></font><span lang="en-us"><b>ALAR</b></span></td>
@@ -148,12 +145,16 @@ span.contentpasted0
 		<td height="0" align="center" valign="top" width="184">
 		　<font face="Times New Roman"><b>Mr. Arto APILA<span lang="zh-cn">
 		</span>(Co-supervised by Dr. Dorina Rajanen)</b></font></td>
+		<td height="0" align="center" valign="top" width="225">
+		<p style="text-align: center; margin-top: 0.2cm; margin-bottom: 0.5cm">
+		<font face="Times New Roman"><b>Mr. Yan </b></font><span lang="zh-cn">
+		<b>JIANG</b></span></td>
 	</tr>
 	<tr>
-		<td height="0" align="center" valign="top" width="225">
-		<img border="0" src="Yan.jpg" width="145" height="190"></td>
 		<td height="0" align="center" valign="top" width="224">
 		<img border="0" src="Boshra.jpg" width="145" height="156"></td>
+		<td height="0" align="center" valign="top" width="224">
+		&nbsp;</td>
 		<td height="0" align="center" valign="top" width="232">
 		&nbsp;</td>
 		<td height="0" align="center" valign="top" width="188">
@@ -162,13 +163,11 @@ span.contentpasted0
 		&nbsp;</td>
 	</tr>
 	<tr>
-		<td height="0" align="center" valign="top" width="225">
-		<p style="text-align: center; margin-top: 0.2cm; margin-bottom: 0.5cm">
-		<font face="Times New Roman"><b>Mr. Yan </b></font><span lang="zh-cn">
-		<b>JIANG</b></span></td>
 		<td height="0" align="center" valign="top" width="224">
 		<font face="Times New Roman"><b>Ms. Boshra <span lang="zh-cn">NAJARI</span></b></font><p>
 		<span lang="zh-cn"><b>(Primarily supervised by Prof. Andy Nguyen)</b></span></td>
+		<td height="0" align="center" valign="top" width="224">
+		&nbsp;</td>
 		<td height="0" align="center" valign="top" width="232">
 		&nbsp;</td>
 		<td height="0" align="center" valign="top" width="188">
@@ -213,43 +212,18 @@ span.contentpasted0
 		<font face="Times New Roman" size="4"><b><u>Visiting researchers</u><span lang="en-us">:</span></b></font></td>
 	</tr>
 	<tr>
-		<td height="0" align="center" valign="top" width="225">
-		　<img border="0" src="Yushun.jpg" width="159" height="160"></td>
-		<td height="0" align="center" valign="top" width="225">
-		<img border="0" src="Jens.jpg" width="119" height="162"></td>
-		<td height="0" align="center" valign="top" width="232">
-		&nbsp;</td>
 		<td height="0" align="center" valign="top" width="188">
 		<img border="0" src="Mark.jpg" width="168" height="161"></td>
 		<td height="0" align="center" valign="top" width="225">
 		&nbsp;</td>
+		<td height="0" align="center" valign="top" width="232">
+		&nbsp;</td>
+		<td height="0" align="center" valign="top" width="188">
+		&nbsp;</td>
+		<td height="0" align="center" valign="top" width="225">
+		&nbsp;</td>
 	</tr>
 	<tr>
-		<td height="0" align="center" valign="top" width="225">
-		<font face="Times New Roman"><b>　Mr. Yushun XIAO</b></font><p>&nbsp;</p>
-		<p>
-		<font face="Times New Roman">Doctoral student</font></p>
-		<p>
-		<font face="Times New Roman">Southeast University</font></p>
-		<p><font face="Times New Roman">Oct. 2023 - <span lang="zh-cn">Oct</span>. 2025</font></p></td>
-		<td height="0" align="center" valign="top" width="225">
-		<b><font face="Times New Roman">Mr. Jens GEBELE </font> </b>
-		<p>&nbsp;</p>
-		<p>
-		<font face="Times New Roman">Doctoral researcher<br>
-		<br>
-		Julius-Maximilians-Universität Würzburg<span lang="zh-cn">, Germany</span></font><p>
-		<span lang="zh-cn">Aug. 2025 - Oct. 2025</span></td>
-		<td height="0" align="center" valign="top" width="232">
-		<span lang="zh-cn"><b><font face="Times New Roman">Mr</font></b></span><b><font face="Times New Roman"><span lang="zh-cn">. </span>Luu Tu 
-		Nguyen</font></b><p><span lang="zh-cn"><b>&nbsp;&nbsp; </b></span></p>
-		<p style="text-align: left"><span lang="zh-cn"><b>&nbsp;&nbsp;Visiting researcher</b></span></p>
-		<p>&nbsp;</p>
-		<p><span data-teams="true">VNU University of Engineering and Technology</span><p>&nbsp;<h3 class="LC20lb MBeuO DKV0Md">
-		<mark class="QVRyCf">
-		<span data-huuid="9982943759158199878">
-		<font size="3"><span style="font-weight: 400">Aug. - Dec. 2025</span></font></span></mark></h3>
-		</td>
 		<td height="0" align="center" valign="top" width="188">
 		<b><span lang="zh-cn">Mr. </span>Mark<span lang="zh-cn"> </span>Adamik</b>
 		<p>&nbsp;</p>
@@ -262,12 +236,33 @@ span.contentpasted0
 		<font size="3"><span style="font-weight: 400">Sep. - Dec. 2025</span></font></span></h3>
 		<p>&nbsp;</td>
 		<td height="0" align="center" valign="top" width="225">
+		<span lang="zh-cn"><b><font face="Times New Roman">Mr</font></b></span><b><font face="Times New Roman"><span lang="zh-cn">. </span>Luu Tu 
+		Nguyen</font></b><p><span lang="zh-cn"><b>&nbsp;&nbsp; </b></span></p>
+		<p style="text-align: left"><span lang="zh-cn"><b>&nbsp;&nbsp;Visiting researcher</b></span></p>
+		<p>&nbsp;</p>
+		<p><span data-teams="true">VNU University of Engineering and Technology</span><p>&nbsp;<h3 class="LC20lb MBeuO DKV0Md">
+		<mark class="QVRyCf">
+		<span data-huuid="9982943759158199878">
+		<font size="3"><span style="font-weight: 400">Aug. - Dec. 2025</span></font></span></mark></h3>
+		<p>&nbsp;</td>
+		<td height="0" align="center" valign="top" width="232">
+		&nbsp;</td>
+		<td height="0" align="center" valign="top" width="188">
+		&nbsp;</td>
+		<td height="0" align="center" valign="top" width="225">
 		&nbsp;</td>
 	</tr>
 	</table>
 <p class="title" style="margin-top:1cm; margin-bottom:9pt">
 <font size="4"><b><span lang="zh-cn">A</span>lumni:</b></font></p>
 <table border="0" width="40%">
+	<tr>
+		<td width="226" height="0" align="center" valign="top">
+		<img border="0" src="Marko.jpg"></td>
+		<td height="0" align="center" valign="top" width="397">
+		<p style="text-align: center">&nbsp;</p>
+		<p style="text-align: center"><b>Dr. Marko Savic</b></td>
+	</tr>
 	<tr>
 		<td width="226" height="0" align="center" valign="top">
 		<img border="0" src="Hanlin.jpg" width="157" height="149"></td>
@@ -523,6 +518,32 @@ span.contentpasted0
 <p class="title" style="line-height: 150%">
 <font face="Times New Roman" size="4"><b>Past visiting researchers:</b></font></p>
 <table border="0" width="40%">
+	<tr>
+		<td width="226" height="0" align="center" valign="top">
+		<img border="0" src="Jens.jpg" width="119" height="162"></td>
+		<td height="0" align="center" valign="top" width="397">
+		&nbsp;<p style="text-align: center"><b><font face="Times New Roman">Mr. Jens GEBELE </font> </b>
+		</p>
+		<p>&nbsp;</p>
+		<p style="text-align: center">
+		<font face="Times New Roman">Doctoral researcher<br>
+		<br>
+		Julius-Maximilians-Universität Würzburg<span lang="zh-cn">, Germany</span></font><p style="text-align: center">
+		<span lang="zh-cn">Aug. 2025 - Oct. 2025</span></td>
+	</tr>
+	<tr>
+		<td width="226" height="0" align="center" valign="top">
+		<img border="0" src="Yushun.jpg" width="159" height="160"></td>
+		<td height="0" align="center" valign="top" width="397">
+		&nbsp;<p align="left" style="text-align: center">
+		<font face="Times New Roman"><b>Mr. Yushun XIAO</b></font></p>
+		<p>&nbsp;</p>
+		<p style="text-align: center">
+		<font face="Times New Roman">Doctoral student</font></p>
+		<p style="text-align: center">
+		<font face="Times New Roman">Southeast University</font></p>
+		<p style="text-align: center"><font face="Times New Roman">Oct. 2023 - <span lang="zh-cn">Oct</span>. 2025</font></p></td>
+	</tr>
 	<tr>
 		<td width="226" height="0" align="center" valign="top">
 		&nbsp;</td>
