--- a/honors_awards.htm
+++ b/honors_awards.htm
@@ -177,7 +177,7 @@ representation), 2022-.</span></font></p>
 Prize.</font></u></b></p>
 <p style="text-align: justify; text-justify: inter-ideograph; text-indent: -20.9pt; margin-left: 20.9pt">
 <font size="4"><span style="font-family: Times New Roman">-- <b>Aalto 
-Research/Artistic Impact Award 2025 to&nbsp;Ellis Institute.</b></span></font></p>
+Research/Artistic Impact Award 2025 to&nbsp;ELLIS Institute Finland.</b></span></font></p>
 <p style="text-align: justify; text-justify: inter-ideograph; text-indent: -20.9pt; margin-left: 20.9pt">
 <font size="4">
 <span style="font-style: normal; font-variant: normal; font-weight: normal; font-family: Times New Roman">
@@ -205,7 +205,7 @@ society, 2023-.</span></font></p>
 <font size="4"><span style="font-family: Times New Roman">--&nbsp; Selected to
 <a target="_blank" style="font-family: Times New Roman" href="https://elsevier.digitalcommonsdata.com/datasets/btchxktzyw/4?fbclid=IwAR1d4PyRLUjFosQfpmynpn2WHrufhuURBZCJZWQwPzo13ARvsb5rBRfFOQE">
 world's top 2% scientists</a> (most widely cited scientists in different 
-disciplines) by Stanford University for four consecutive years (2019-2023).</span></font></p>
+disciplines) by Stanford University for four consecutive years (2019-2024).</span></font></p>
 <p style="text-align: justify; text-justify: inter-ideograph; text-indent: -20.9pt; margin-left: 20.9pt">
 <span style="font-family: Times New Roman"><font size="4">--</font></span><font size="4"><span style="font-style: normal; font-variant: normal; font-weight: normal; font-family: Times New Roman">
 <span style="font-family: Times New Roman; font-style: normal; font-variant: normal; font-weight: normal">
@@ -365,7 +365,7 @@ Postdoctoral researchers: </span></p>
 2024-present</font></span></p>
 <p class="MsoNormal" style="line-height: 200%; ">
 <span style="font-family: Times New Roman"><font size="4">-- Dr. <b>Kejuan Yue</b>: 
-2024-present</font></span></p>
+2024-2025</font></span></p>
 <p style="line-height: 200%" class="MsoNormal">
 <font size="4"><span style="font-family: Times New Roman">--&nbsp;Dr. <b>Jukka 
 Komulainen</b>: 2022-2023</span></font></p>
@@ -450,13 +450,15 @@ student: 2024-present&nbsp; (Main Supervisor)</font></p>
 <b>Ms. Hui Zhang</b>, Ph.D. student: 2022-present&nbsp; (Main Supervisor)</font></p>
 <p class="MsoNormal" style="line-height: 200%">
 <font face="Times New Roman" size="4">--
-<b>Mr. Marko Savic</b>, Ph.D. student: 2021-present&nbsp; (Main Supervisor)</font></p>
+<b>Mr. Marko Savic</b>, Ph.D. student: 2021-2025&nbsp; (Main Supervisor, Pass 
+with distinction)</font></p>
 <p style="line-height: 200%" class="MsoNormal">
 <font face="Times New Roman" size="4">--
 <b>Mr. Atif Shah</b>, Ph.D. student: 2020-present&nbsp; (Main Supervisor)</font></p>
 <p style="line-height: 200%" class="MsoNormal">
 <font face="Times New Roman" size="4">--
-<b>Mr. Tuomas Varanka</b>, Ph.D. student: 2021-present&nbsp; (Co-Supervisor)</font></p>
+<b>Mr. Tuomas Varanka</b>, Ph.D. student: 2021-2025&nbsp; (Main Supervisor, Pass 
+with distinction)</font></p>
 <p style="line-height: 200%" class="MsoNormal">
 <font face="Times New Roman" size="4">--
 <b>Mr. Abdelrahman Mostafa</b>, Ph.D. student: 2020-present (Main Supervisor)</font></p>
