--- a/publications.htm
+++ b/publications.htm
@@ -158,15 +158,19 @@ Dec., 2024.</font></p>
 <p style="margin-top:0.5cm; margin-bottom:0.5cm" class="MsoNormal">
 <span lang="en-us"><font size="5"><b>2026</b></font></span></p>
 <p style="margin-top:0.5cm; margin-bottom:0.5cm" class="MsoNormal">
-<font face="Times New Roman" size="4">&nbsp;3<span lang="fi">70</span>. Marko Savic, <b>Guoying Zhao</b>.
+<font face="Times New Roman" size="4">&nbsp;3<span lang="fi">7</span>1. Marko Savic, <b>Guoying Zhao</b>.
 Oulu Remote-photoplethysmography Presentation Attacks Database (OR-PAD). 
 International Journal of Computer Vision (IJCV), 2026.</font></p>
 <p style="margin-top:0.5cm; margin-bottom:0.5cm" class="MsoNormal">
-<span lang="fi"><font size="4">&nbsp;</font></span><font face="Times New Roman" size="4">36<span lang="fi">9</span>.<span lang="fi">
+<span lang="fi"><font size="4">&nbsp;</font></span><font face="Times New Roman" size="4">370.<span lang="fi">
 </span>Mengting Wei, Xingxun Jiang, Haoyu Chen, Yante Li, <b>Guoying Zhao</b>. 
 LatentMag: Self-Supervised 3D Magnification for Micro Expressions via Latent 
 Extrapolation<span lang="fi">.</span> IEEE Transactions on Affective Computing<span lang="fi">. 
 2026.</span></font></p>
+<p style="margin-top:0.5cm; margin-bottom:0.5cm" class="MsoNormal">
+<font size="4">&nbsp;369. Hui Kuurila-Zhang, Haoyu Chen, <b>Guoying Zhao</b>. 
+Evaluating the Adversarial Robustness of Vision-Language Models for Facial 
+Expression Recognition. IEEE Intelligent Systems. </font></p>
 <p style="margin-top:0.5cm; margin-bottom:0.5cm" class="MsoNormal">
 <span lang="fi"><font size="4">&nbsp;</font></span><font face="Times New Roman" size="4">36<span lang="fi">8</span>. Yang Merik Liu, Adam Turnbull, Ehsan Adeli, <b>Guoying Zhao</b>, Kuan Hong Wang, F. 
 Vankee Lin. <u>A Multi-Dimensional Transfer Learning Framework for Studying 
